[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 


[project]
name = "Second Brain API"
version = "0.0.1"
authors = [
  { name="Rohan Batra", email="contact@rohanbatra.in" },
]
description = "A python package for second brain template"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rohanbatrain/second-brain-api"
"Bug Tracker" = "https://github.com/rohanbatrain/second-brain-api/issues"